# Helix

./: .gitignore  CHANGELOG.md  README.md  amino_acids.py  bioinformatics.py  codon.py  cyclospectrum.py  helix_api.py  helix_cli.py  helix_workflows.py  lakefile.lean  mkdocs.yml  nussinov_algorithm.py  protein.py  pyproject.toml  triage.py
.bench/: baseline.json  workflow_bench.yaml
.github/workflows/: ci.yaml  (+4 more)
VeriBiota/: Check.lean
benchmarks/: README.md  __init__.py  api_benchmarks.py  benchmark_baseline.json  crispr_efficiency_panel.py  crispr_offtarget_panel.py  crispr_plasmid_panel.py  engine_crispr_perf.py  engine_prime_perf.py  prime_panel.py  verify_crispr_micro.py
docs/: benchmarks.md  cli.md  cli_headless.md  contributing.md  dev_gpu_profiling.md  edit-dag-viz.md  edit_dag_frames.md  edit_dag_overview.md  engine_architecture.md  engine_cuda_plan.md  getting-started.md  helix_studio_strategy.md  index.md  ogn_integration.md  prime_physics.md  release_checklist.md  schema-reference.md  schema.md  scoring_version.md  snapshot_spec_v1.md  snapshot_spec_v1.schema.json  validation_crispr_efficiency_panel.md  validation_crispr_offtarget_panel.md  validation_crispr_plasmid.md  validation_prime_panel.md  veribiota.md  viz.md  whats-new.md
examples/: README.md  cas9.json  crispr_demo_genome.json  crispr_demo_guide.json  crispr_edit_dag.json  cyclospectrum_demo.py  egfr_monolayer.hgx  find_orfs.py  gc_skew_demo.py  guides.tsv  helix_api_demo.py  hg19_chr_demo.fa  kmer_counter.py  live_demo.hgx  live_demo_inputs.json  nussinov_trace.py  pcr_config.json  pcr_primers.json  pegs.tsv  peptide_mass_lookup.py  prime_demo_configs.json  prime_demo_genome.json  prime_edit_dag.json  prime_editor.json  prime_viz_spec.json  toggle_switch.hgx  translate_sequence.py  triage_report.py
helixtasks/: __init__.py  egfr_grb2_build_amici.py  egfr_grb2_fit_pypesto.py  egfr_grb2_orchestrator.py
notebooks/: triage_dashboard.ipynb
scripts/: bench_check.py  build_native_cuda.sh  check_benchmark_regression.py  generate_playground_dags.py  make_cover_image.py  release_0_4_0.sh  update_bench_history.py
site/: 404.html  index.html  sitemap.xml
src/: helix_api.py  helix_workflows.py
src/helix_engine/: CMakeLists.txt  __init__.py  native.py
src/helix_engine/include/helix/: physics.hpp  physics_cuda.hpp
src/helix_engine/src/: binding.cpp  physics.cpp  physics_cuda.cu
templates/: crispr_efficiency_panel.helix.yml  crispr_experiment_example.helix.yml  crispr_offtarget_panel.helix.yml  lab_crispr_plasmid_bench.helix.yml  prime_editing_panel.helix.yml  prime_experiment_example.helix.yml
tests/: conftest.py  test_benchmark_schema.py  test_bioinformatics.py  test_cli_headless.py  test_codon.py  test_crispr_backend_selection.py  test_crispr_dag_micro.py  test_crispr_edit_class_metadata.py  test_crispr_edit_dag_crispr_micro.py  test_crispr_engine_cuda.py  test_crispr_engine_fixtures.py  test_crispr_fuzz.py  test_crispr_guides.py  test_crispr_native_engine.py  test_crispr_simulator.py  test_crispr_viz_dag_parity.py  test_cyclospectrum.py  test_deltas.py  test_edit_dag.py  test_edit_dag_frames.py  test_egfr_grb2_mvp.py  test_egfr_grb2_regression.py  test_geom_builders.py  test_gl_panel.py  test_helix_api.py  test_helix_cli.py  test_integration_studio.py  test_invariants.py  test_live_cli.py  test_nussinov.py  test_pcr_engine.py  test_playground_crispr_micro.py  test_prime_engine.py  test_prime_physics_score.py  test_protein.py  test_realtime_transport.py  test_rna_mccaskill.py  test_run_history.py  test_scc.py  test_scheduler_islands.py  (+7 more)
veribiota_work/: crispr_micro.dag.json  crispr_micro.lean-check.json
workflows/: plasmid_screen.yaml
(+240 files in other folders)
